package ua.edu.ucu.oopmiddle.core.scrapers;

import ua.edu.ucu.oopmiddle.core.CompanyInfo;

public interface Scraper {
    void scrapeTo(CompanyInfo companyInfo);
}
